Revert "Setup Java 21 container (#28833)"
This reverts commit e8e38145d96a7b0561a418c19519917b0567591e.